<resources>
    <string name="app_name">ariellemueller_COMP304Lab2</string>
    <string name="enter_button_main">Enter</string>
    <string name="main_page_logo_desc">main page logo</string>
    <string name="apartments_menu_option">Apartments</string>
    <string name="condominiums_menu_option">Condominiums</string>
    <string name="detached_homes_menu_option">Detached Homes</string>
    <string name="semi_detached_homes_menu_option">Semi-Detached Homes</string>
    <string name="town_houses_menu_option">Town Houses</string>
    <string name="string_town_houses_menu_option" />
    <string name="town_houses_menu">Town Houses</string>
    <string name="apartment_activity_title">Apartments Available:</string>
    <string name="check_out_title">Check Out</string>
    <string name="home_selection_page">Home Selection Page</string>
    <string name="final_order">Final Order</string>
    <string name="detached_homes_available">Detached Homes Available:</string>
    <string name="condominums_available">Condominums Available:</string>
    <string name="payment_acitivity">Payment Acitivity</string>
    <string name="semi_detached_homes_available">Semi-Detached Homes Available:</string>
    <string name="town_houses_available">Town Houses Available:</string>
    <string name="check_out">Check Out</string>
    <string name="check_out_button_desc">Use the Options Menu Control to view available homes to rent. When you are satisfied with your selections, return to this menu and select the check out button to proceed.</string>
    <string name="name_label">Name:</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="debit_credit_label">Debit/Credit:</string>
    <string name="card_number_hint">Card Number</string>
    <string name="your_favourite_game">Your Favourite Game</string>
    <string name="customer_information">Customer Information:</string>
    <string name="biggest_fear_label">Biggest Fear:</string>
    <string name="your_hobby_hint">Your Hobby</string>
    <string name="hobby_label">Hobby:</string>
    <string name="best_game_label">Best Game:</string>
    <string name="enter_your_biggest_fear_hint">Enter Your Biggest Fear</string>
    <string name="apartment_1">Apartment 1:</string>
    <string name="apartment_2_check">Apartment 2:</string>
    <string name="condo_1">Condo 1:</string>
    <string name="condo_2">Condo 2:</string>
    <string name="town_house_1">Town House 1:</string>
    <string name="town_house_2">Town House 2:</string>
    <string name="detached_home_1">Detached Home 1:</string>
    <string name="detached_home_2">Detached Home 2:</string>
    <string name="semi_detached_home_1">Semi-Detached Home 1:</string>
    <string name="semi_detached_home_2">Semi-Detached Home 2:</string>
    <string name="add_to_checkout">Add to checkout</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="detached1">232 Centre Street: $300,000</string>
    <string name="detached2">43 Margret Street: $600,000</string>
    <string name="apartment1">1864 Rue Frontenac: $900,000</string>
    <string name="apartment2">232 College Street: $700,000</string>
    <string name="condo1">123 Woodbine Ave: $1,000,000</string>
    <string name="condo2">64 Queen Street East: $1,100,000</string>
    <string name="semi2">99 Victor Road: $350,000</string>
    <string name="semi1">174 King Street: $1,300,000</string>
    <string name="town1">188 Gerrard Street: $800,000</string>
    <string name="town2">3 Coxwell Avenue: $500,000</string>
</resources>