<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TownHouseActivity">

    <TextView
        android:id="@+id/townhouses_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/town_houses_available"
        android:textSize="24sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/townhouse_one_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@mipmap/townhouse_one"
        android:text="@string/town_house_1" />

    <CheckBox
        android:id="@+id/townhouse_two_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@mipmap/townhouse_two"
        android:text="@string/town_house_2" />


    <Button
        android:id="@+id/save_checked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveCheck"
        android:text="@string/add_to_checkout"/>

    <Button
        android:id="@+id/checkout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="checkoutPageOpen"
        android:text="@string/proceed_to_checkout"/>

</LinearLayout>