<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ApartmentActivity">

    <TextView
        android:id="@+id/apartmentTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apartment_activity_title"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/apartment_one_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@mipmap/apartment_one"
        android:text="@string/apartment_1"/>

    <CheckBox
        android:id="@+id/apartment_two_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apartment_2_check"
        android:drawableEnd="@mipmap/apartment_two"/>

</LinearLayout>