<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CondoActivity">

    <TextView
        android:id="@+id/condo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condominums_available"
        android:textSize="24sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/condo_one_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@mipmap/condo_one"
        android:onClick="onCheckboxClickedCondo"
        android:text="@string/condo_1" />

    <CheckBox
        android:id="@+id/condo_two_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@mipmap/condo_two"
        android:onClick="onCheckboxClickedCondo"
        android:text="@string/condo_2" />
</LinearLayout>