<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetachedHomeActivity">

    <TextView
        android:id="@+id/detached_home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detached_homes_available"
        android:textSize="24sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/detached_one_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@mipmap/detached_one"
        android:onClick="onCheckboxClickedDetached"
        android:text="@string/detached_home_1" />

    <CheckBox
        android:id="@+id/detached_two_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@mipmap/detached_two"
        android:onClick="onCheckboxClickedDetached"
        android:text="@string/detached_home_2" />
</LinearLayout>