<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SemiDetachedActivity">

    <TextView
        android:id="@+id/semi_detached_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/semi_detached_homes_available"
        android:textSize="24sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/semidetached_one_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@mipmap/semidetached_one"
        android:onClick="onCheckboxClickedSemi"
        android:text="@string/semi_detached_home_1" />

    <CheckBox
        android:id="@+id/semidetached_two_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@mipmap/semidetached_two"
        android:onClick="onCheckboxClickedSemi"
        android:text="@string/semi_detached_home_2" />


</LinearLayout>